--- a/Git/Views/Error.cshtml
+++ b/Git/Views/Error.cshtml
@@ -1,10 +1,8 @@
-﻿<div class="container">
-    Your request is not valid. Errors:
-
+﻿<div>
     <ul>
-        @foreach (var error in Model)
+        @foreach (var err in Model)
         {
-            <li>@error</li>
+            <li>@err</li>
         }
     </ul>
 </div>
