--- a/Git/Views/Repositories/All.cshtml
+++ b/Git/Views/Repositories/All.cshtml
@@ -7,9 +7,12 @@
                     <p>Repositories</p>
                 </div>
 
-                <div class="d-flex justify-content-center">
-                    <a class="btn btn-block btn-primary text-white mb-3" href="/Repositories/Create">Create a repository</a>
-                </div>
+                @if (User != null)
+                {
+                    <div class="d-flex justify-content-center">
+                        <a class="btn btn-block btn-primary text-white mb-3" href="/Repositories/Create">Create a repository</a>
+                    </div>
+                }
 
                 <div class="component">
                     <table class="table table-hover">
@@ -19,19 +22,28 @@
                                 <th scope="col">Owner</th>
                                 <th scope="col">Created On</th>
                                 <th scope="col">Commits Count</th>
-                                <th scope="col">Commit</th>
+                                @if (User != null)
+                                {
+                                    <th scope="col">Commit</th>
+                                }
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="table-light">
-                                <th scope="row">ASP.NET Core Template</th>
-                                <td>Nikolay Kostov</td>
-                                <td>22/10/2018 08:00</td>
-                                <td>254</td>
-                                <td>
-                                    <a class="btn btn-block btn-primary text-white mb-3" href="/Commits/Create?id=123">Commit</a>
-                                </td>
-                            </tr>
+                            @foreach (var repository in Model)
+                            {
+                                <tr class="table-light">
+                                    <th scope="row">@repository.Name</th>
+                                    <td>@repository.Owner</td>
+                                    <td>@repository.CreatedOn</td>
+                                    <td>@repository.Commits</td>
+                                    @if (User != null)
+                                    {
+                                        <td>
+                                            <a class="btn btn-block btn-primary text-white mb-3" href="/Commits/Create?id=@repository.Id">Commit</a>
+                                        </td>
+                                    }
+                                </tr>
+                            }
                         </tbody>
                     </table>
                 </div>
